package fx;

public enum Category {
	
	Castle,
	House,
	Building,
	Ruin,
	Other
	
}
