@startuml Model4
skinparam classAttributeIconSize 0

User o-- BuildingUser
City o-- BuildingCity
Building *-- Category
Ui <..> User
Ui <..> City
Ui <..> Building

class User{
    - int idUser
    - String email
    - String passWord
    - int role
    - List<BuildingUSer> Buildings

    + void addBuilding(Building building);
    + void removeBuilding(Building building);
}

class BuildingUser{
    - int idBuildingUser
    - String name
    - String photoUrl
}

class City{
    - int idCity
    - String name
    - List<BuildingCity> Buildings

    + void addBuildingLight(Building building);
    + void removeBuildingLight(Building building);
}

class BuildingCity{
    - int idBuildingCity
    - String name
    - String photoUrl

}

class Building{
    - int idBuilding
    - String name
    - String streetNumber
    - String streetName
    - String zipCode
    - String city
    - String latitude
    - String longitude
    - List<String> photos
    - String description
    - Category category
    - int constructionYear
    - String architect

}

enum Category{
    null
    Castle
    House
    Building
    Ruin
}

@enduml



@startuml Model3
skinparam classAttributeIconSize 0

User o-- BuildingUser
City o-- BuildingCity
Building *-- Category
Ui <..> User
Ui <..> City
Ui <..> Building

class User{
    - int idUser
    - String email
    - String passWord
    - int role
    - List<BuildingUSer> Buildings

    + String getIdUser()
    + void setIdUser(int id)
    + String getEmail()
    + void setEmail(String email)
    + String getPassWord()
    + void setPassWord(String email)
    + String getRole()
    + void setRole(int id)
    + List<Building> getBuildings()
    + void addBuilding(Building building);
    + void removeBuilding(Building building);
}

class BuildingUser{
    - int idBuildingUser
    - String name
    - String photoUrl
}

class City{
    - int idCity
    - String name
    - List<BuildingCity> Buildings

    + String getIdCity()
    + void setIdCity(int id)
    + String getName()
    + void setName(String name)
    + List<BuildingLight> getBuildings()
    + void addBuildingLight(Building building);
    + void removeBuildingLight(Building building);
}

class BuildingCity{
    - int idBuildingCity
    - String name
    - String photoUrl

}

class Building{
    - int idBuilding
    - String name
    - String streetNumber
    - String streetName
    - String zipCode
    - String city
    - String latitude
    - String longitude
    - List<String> photos
    - String description
    - Category category
    - int constructionYear
    - String architect
    
    + int getIdBuilding()
    + void setIdBuilding(int idBuilding)
    + String getName()
    + void setName(String name)
    + String getStreetNumber()
    + void setStreetNumber(String streetNumber)
    + String getStreetName()
    + void setStreetName(String streetName)
    + String getZipCode()
    + void setZipCode(String zipCode)
    + String getCity()
    + void setCity(String city)
    + String getLatitude()
    + void setLatitude(String latitude)
    + String getLongitude()
    + void setLongitude(String longitude)
    + List<String> getPhotos()
    + void setPhotos(List<String> photos)
    + String getDescription()
    + void setDescription(String description)
    + String getCategory()
    + void setCategory(Category category)
    + int getConstructionYear()
    + void setConstructionYear(int constructionYear)
    + String getArchitect()
    + void setArchitect(String architect)

}

enum Category{
    null
    Castle
    House
    Building
    Ruin
}

@enduml



@startuml Model2
skinparam classAttributeIconSize 0

User o-- Building
City o-- Building
Building *-- Category
Building o-- Spec
Spec <.> Type

class User{
    - int idUser
    - String email
    - String passWord
    - int role
    - List<Building> Buildings

    + String getIdUser()
    + void setIdUser(int id)
    + String getEmail()
    + void setEmail(String email)
    + String getPassWord()
    + void setPassWord(String email)
    + String getRole()
    + void setRole(int id)
    + List<Building> getBuildings()
    + void addBuilding(Building building);
    + void removeBuilding(Building building);
}

class City{
    - int idCity
    - String name
    - List<Building> Buildings

    + String getIdCity()
    + void setIdCity(int id)
    + String getName()
    + void setName(String name)
    + List<Building> getBuildings()
    + void addBuilding(Building building);
    + void removeBuilding(Building building);
}

class Building{
    - int idBuilding
    - String name
    - String streetNumber
    - String streetName
    - String zipCode
    - String city
    - Point coordinate
    - List<String> photos
    - String description
    - Category category
    - int constructionYear
    - String architect
    - List<Spec> Specs

    + int getIdBuilding()
    + void setIdBuilding(int idBuilding)
    + String getName()
    + void setName(String name)
    + String getStreetNumber()
    + void setStreetNumber(String streetNumber)
    + String getStreetName()
    + void setStreetName(String streetName)
    + String getZipCode()
    + void setZipCode(String zipCode)
    + String getCity()
    + void setCity(String city)
    + Point getCoordinate()
    + void setCoordinate(Point coordinate)
    + List<String> getPhotos()
    + void addPhoto(String photo);
    + void removePhoto(String photo);
    + String getDescription()
    + void setDescription(String description)
    + String getCategory()
    + void setCategory(Category category)
    + int getConstructionYear()
    + void setConstructionYear(int constructionYear)
    + String getArchitect()
    + void setArchitect(String architect)
    + List<Spec> getSpecs()
    + void addSpecs(Spec spec);
    + void removeSpecs(Spec spec);
}

enum Category{
    null
    Castle
    House
    Building
    Ruin
}

class Spec{
    -int idSpec
    -Type name
    -String description
    -List<String> photos

    + int getidSpec()
    + void setidSpec(int id)
    + String getName()
    + void setName(String name)
    + String getDescription()
    + void setDescription(String description)

}

enum Type{
    Fundation
    Windows
    Roof
    Wall
}

@enduml


@startuml Model1
skinparam classAttributeIconSize 0

User o-- Building
Building *-- Adress
City o-- Building
Building *-- Category
Building o-- Spec
Spec *-- Type

class User{
    - int idUser
    - String email
    - String passWord
    - int role
    - List<Building> Buildings
    + String getIdUser()
    + void setIdUser(int id)
    + String getEmail()
    + void setEmail(String email)
    + String getPassWord()
    + void setPassWord(String email)
    + String getRole()
    + void setRole(int id)
    + List<Building> getBuildings()
    + void addBuilding(Building building);
    + void removeBuilding(Building building);
}

class City{
    - int idCity
    - String name
    - List<Building> Buildings
    + String getIdCity()
    + void setIdCity(int id)
    + String getName()
    + void setName(String name)
    + List<Building> getBuildings()
    + void addBuilding(Building building);
    + void removeBuilding(Building building);
}

class Building{
    -int idBuilding
    -String name
    -Adress adress
    -List<String> photos
    -String description
    -Category category
    -int constructionYear
    -String architect
    -List<Spec> Specs
    + int getIdBuilding()
    + void setIdBuilding(int id)
    + String getName()
    + void setName(String name)
    + Adress getAdress()
    + void setAdress(Adress adress)
    + List<String> getBuildings()
    + void addBuilding(String photo);
    + void removeBuilding(String photo);
    + String getDescription()
    + void setDescription(String description)
    + String getCategory()
    + void setCategory(Category category)
    + int getConstructionYear()
    + void setConstructionYear(int constructionYear)
    + String getArchitect()
    + void setArchitect(String architect)
    + List<Spec> getSpecs()
    + void addSpecs(Spec spec);
    + void removeSpecs(Spec spec);
}

class Adress{
    - int idAdress
    - int number
    - String streetName
    - int zipCode
    - String city
    - Point coordinate
    + int getIdAdress()
    + void setIdAdress(int id)
    + String getNumber()
    + void setNumber(int number)
    + String getStreetName()
    + void setStreetName(String name)
    + String getZipCode()
    + void setZipCode(int zipCode)
    + String getCity()
    + void setCity(String city)
    + Point getCoordinate()
    + void setCoordinate(Point coordinate)
}

enum Category{
    null
    Castle
    House
    Building
    Ruin
}

class Spec{
    -int idSpec
    -Type name
    -String description
    -List<String> photos
    + int getidSpec()
    + void setidSpec(int id)
    + String getName()
    + void setName(String name)
    + String getDescription()
    + void setDescription(String description)

}

enum Type{
    Fundation
    Windows
    Roof
    Wall
}

@enduml

@startuml model Mod

actor User 
User -> ApiLogin : Login et MPD
ApiLogin -> User : OK
User -> ApiCity : get all
database H2DB
ApiCity -> H2DB
H2DB -> ApiCity
ApiCity -> User : List<city>
User -> ApiBuilding : getbuilding From City
ApiBuilding -> H2DB
H2DB -> ApiBuilding
ApiBuilding -> User :List<Building>
User -> User : choisir ses batiments
User -> ApiMap : envoie sa liste
ApiMap -> OpenStreetMap
OpenStreetMap -> ApiMap
ApiMap -> User : renvoi une image ?

@enduml

